게시글 등록 화면 만들기

--- a/src/main/resources/templates/index.mustache
+++ b/src/main/resources/templates/index.mustache
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html>
 <head>
+    <meta charset="UTF-8">
     <title>스프링 부트 웹사이트</title>
     <meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 </head>
